.history/k8s/ingress-service_20200409012317.yaml
apiVersion: extensions/v1beta1
kind: Ingress
  name: ingress-service
  annotation:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
  spec:
    rules:
      http:
        - paths:
            - path: /
              backend:
                serviceName: client-cluster-ip-service
                servicePort: 3000
            - path: /api/
